name:                hhug-app-transformers
version:             0.1.0.0
license-file:        LICENSE
author:              Christopher Reichert
maintainer:          creichert07@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hhug-app-transformers
  main-is:             App.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8
                     , transformers
                     , mtl
  default-language:    Haskell2010